--- a/皮蛋.html
+++ b/皮蛋.html
@@ -23,8 +23,7 @@
 			margin-left: 3PX;
 			float: left;
 		}
-		embed{
-				float: right;
+		embed{		
 			height: 50px;
 		}
 		dt,dd{
@@ -55,7 +54,7 @@
 
 		ul{
 			text-align: center;
-			width: 700px;
+			width: 100%;
 			margin-left:auto;
 			margin-right:auto;
 
@@ -72,27 +71,37 @@
 				animation: aa 1s;
 			animation-iteration-count: infinite;
 		}
+		object{
+			position:inherit;
+			margin-left:200px;
+			magin:150px;
+			width:600px ;
+			height:500px;
+			border: 1px solid;
+		}
 	</style>
 </head>
 
 <body>
-	<embed src="勋章(伴奏)-代珊-28501385.mp4">
-	<dl>
-		<h4>通缉重大嫌疑犯</h4>
-		<dt>姓名：王鑫宇</dt>
-		<dt>性别：女</dt>
-		<dt>个人著作：黄色....</dt>
-		<dt>照骗	：</dt>
-		<img src="TIM图片20181228104700.jpg">
-	</dl>
+
+	
 	
 <ul>
 		<li><a href="">网页首页</a></li>
 		<li><a href="">皮蛋导演</a></li>
 		<li><a href="">皮蛋导演</a></li>
 		<li><a href="">皮蛋导演</a></li>
+	<li><a href="">皮蛋导演</a></li>
+	<li><a href="">皮蛋导演</a></li>
+	<li><a href="">皮蛋导演</a></li>
     
-  <li><a href="">皮蛋导演</a></li>  
+  <li><a href="">皮蛋导演</a></li>
+	<li><a href="">皮蛋导演</a></li> 
+	<li><a href="">皮蛋导演</a></li> 
+	<li><a href="">皮蛋导演</a></li>
+	<li><a href="">皮蛋导演</a></li>
+	<li><a href="">皮蛋导演</a></li>
+	<li><a href="">皮蛋导演</a></li>
   
 	
 	<li><a href="">皮蛋导演</a></li>
@@ -101,5 +110,14 @@
   <li><a href="">皮蛋导演</a>	</li>
   
 	</ul>
+	<dl>
+		<h4>通缉重大嫌疑犯</h4>
+		<dt>姓名：王鑫宇</dt>
+		<dt>性别：女</dt>
+		<dt>个人著作：黄色....</dt>
+		<dt>照骗	：</dt>
+		<img src="TIM图片20181228104700.jpg">
+	</dl>
+	<object data="周笔畅-岁月神偷 (《逆时营救》电影主题曲)(高清).mp4"></object>
 </body>
 </html>
