--- a/text/index.html
+++ b/text/index.html
@@ -1,1 +1,428 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<title></title>
+		<script type="text/javascript" src="js/jquery1.11.3.min.js" ></script>
+		<script type="text/javascript" src="js/bootstrap.min.js" ></script>
+		<link rel="stylesheet" href="css/bootstrap.min.css" />
+	</head>
+	<body>
+<div class="container-fluid">
+	<div class="row-fluid">
+		<div class="span12">
+			<div class="alert">
+				 <button type="button" class="close" data-dismiss="alert">×</button>
+				<h4>
+					提示!
+				</h4> <strong>警告!</strong> 请注意你的个人隐私安全.
+			</div>
+			<div class="row-fluid">
+				<div class="span8">
+					<div class="navbar">
+						<div class="navbar-inner">
+							<div class="container-fluid">
+								 <a data-target=".navbar-responsive-collapse" data-toggle="collapse" class="btn btn-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a> <a href="#" class="brand">网站名</a>
+								<div class="nav-collapse collapse navbar-responsive-collapse">
+									<ul class="nav">
+										<li class="active">
+											<a href="#">主页</a>
+										</li>
+										<li>
+											<a href="#">链接</a>
+										</li>
+										<li>
+											<a href="#">链接</a>
+										</li>
+										<li class="dropdown">
+											 <a data-toggle="dropdown" class="dropdown-toggle" href="#">下拉菜单<strong class="caret"></strong></a>
+											<ul class="dropdown-menu">
+												<li>
+													<a href="#">下拉导航1</a>
+												</li>
+												<li>
+													<a href="#">下拉导航2</a>
+												</li>
+												<li>
+													<a href="#">其他</a>
+												</li>
+												<li class="divider">
+												</li>
+												<li class="nav-header">
+													标签
+												</li>
+												<li>
+													<a href="#">链接1</a>
+												</li>
+												<li>
+													<a href="#">链接2</a>
+												</li>
+											</ul>
+										</li>
+									</ul>
+									<ul class="nav pull-right">
+										<li>
+											<a href="#">右边链接</a>
+										</li>
+										<li class="divider-vertical">
+										</li>
+										<li class="dropdown">
+											 <a data-toggle="dropdown" class="dropdown-toggle" href="#">下拉菜单<strong class="caret"></strong></a>
+											<ul class="dropdown-menu">
+												<li>
+													<a href="#">下拉导航1</a>
+												</li>
+												<li>
+													<a href="#">下拉导航2</a>
+												</li>
+												<li>
+													<a href="#">其他</a>
+												</li>
+												<li class="divider">
+												</li>
+												<li>
+													<a href="#">链接3</a>
+												</li>
+											</ul>
+										</li>
+									</ul>
+								</div>
+								
+							</div>
+						</div>
+						
+					</div>
+				</div>
+				<div class="span4">
+					<form class="form-search">
+						<input class="input-medium search-query" type="text" /> <button type="submit" class="btn">查找</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="row-fluid">
+		<div class="span6">
+			<form class="form-horizontal">
+				<div class="control-group">
+					 <label class="control-label" for="inputEmail">邮箱</label>
+					<div class="controls">
+						<input id="inputEmail" type="text" />
+					</div>
+				</div>
+				<div class="control-group">
+					 <label class="control-label" for="inputPassword">密码</label>
+					<div class="controls">
+						<input id="inputPassword" type="password" />
+					</div>
+				</div>
+				<div class="control-group">
+					<div class="controls">
+						 <label class="checkbox"><input type="checkbox" /> Remember me</label> <button type="submit" class="btn">登陆</button>
+					</div>
+				</div>
+			</form>
+			<ul class="nav nav-list">
+				<li class="nav-header">
+					列表标题
+				</li>
+				<li class="active">
+					<a href="#">首页</a>
+				</li>
+				<li>
+					<a href="#">库</a>
+				</li>
+				<li>
+					<a href="#">应用</a>
+				</li>
+				<li class="nav-header">
+					功能列表
+				</li>
+				<li>
+					<a href="#">资料</a>
+				</li>
+				<li>
+					<a href="#">设置</a>
+				</li>
+				<li class="divider">
+				</li>
+				<li>
+					<a href="#">帮助</a>
+				</li>
+			</ul>
+			<table class="table table-hover table-bordered">
+				<thead>
+					<tr>
+						<th>
+							编号
+						</th>
+						<th>
+							产品
+						</th>
+						<th>
+							交付时间
+						</th>
+						<th>
+							状态
+						</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>
+							1
+						</td>
+						<td>
+							TB - Monthly
+						</td>
+						<td>
+							01/04/2012
+						</td>
+						<td>
+							Default
+						</td>
+					</tr>
+					<tr class="success">
+						<td>
+							1
+						</td>
+						<td>
+							TB - Monthly
+						</td>
+						<td>
+							01/04/2012
+						</td>
+						<td>
+							Approved
+						</td>
+					</tr>
+					<tr class="error">
+						<td>
+							2
+						</td>
+						<td>
+							TB - Monthly
+						</td>
+						<td>
+							02/04/2012
+						</td>
+						<td>
+							Declined
+						</td>
+					</tr>
+					<tr class="warning">
+						<td>
+							3
+						</td>
+						<td>
+							TB - Monthly
+						</td>
+						<td>
+							03/04/2012
+						</td>
+						<td>
+							Pending
+						</td>
+					</tr>
+					<tr class="info">
+						<td>
+							4
+						</td>
+						<td>
+							TB - Monthly
+						</td>
+						<td>
+							04/04/2012
+						</td>
+						<td>
+							Call in to confirm
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+		<div class="span6">
+			<div class="carousel slide" id="carousel-759971">
+				<ol class="carousel-indicators">
+					<li data-slide-to="0" data-target="#carousel-759971">
+					</li>
+					<li data-slide-to="1" data-target="#carousel-759971" class="active">
+					</li>
+					<li data-slide-to="2" data-target="#carousel-759971">
+					</li>
+				</ol>
+				<div class="carousel-inner">
+					<div class="item">
+						<img alt="" src="img/1.jpg" />
+						<div class="carousel-caption">
+							<h4>
+								棒球
+							</h4>
+							<p>
+								棒球运动是一种以棒打球为主要特点，集体性、对抗性很强的球类运动项目，在美国、日本尤为盛行。
+							</p>
+						</div>
+					</div>
+					<div class="item active">
+						<img alt="" src="img/2.jpg" />
+						<div class="carousel-caption">
+							<h4>
+								冲浪
+							</h4>
+							<p>
+								冲浪是以海浪为动力，利用自身的高超技巧和平衡能力，搏击海浪的一项运动。运动员站立在冲浪板上，或利用腹板、跪板、充气的橡皮垫、划艇、皮艇等驾驭海浪的一项水上运动。
+							</p>
+						</div>
+					</div>
+					<div class="item">
+						<img alt="" src="img/3.jpg" />
+						<div class="carousel-caption">
+							<h4>
+								自行车
+							</h4>
+							<p>
+								以自行车为工具比赛骑行速度的体育运动。1896年第一届奥林匹克运动会上被列为正式比赛项目。环法赛为最著名的世界自行车锦标赛。
+							</p>
+						</div>
+					</div>
+				</div> <a data-slide="prev" href="#carousel-759971" class="left carousel-control">‹</a> <a data-slide="next" href="#carousel-759971" class="right carousel-control">›</a>
+			</div>
+			<ul class="thumbnails">
+				<li class="span4">
+					<div class="thumbnail">
+						<img alt="300x200" src="img/people.jpg" />
+						<div class="caption">
+							<h3>
+								冯诺尔曼结构
+							</h3>
+							<p>
+								也称普林斯顿结构，是一种将程序指令存储器和数据存储器合并在一起的存储器结构。程序指令存储地址和数据存储地址指向同一个存储器的不同物理位置。
+							</p>
+							<p>
+								<a class="btn btn-primary" href="#">浏览</a> <a class="btn" href="#">分享</a>
+							</p>
+						</div>
+					</div>
+				</li>
+				<li class="span4">
+					<div class="thumbnail">
+						<img alt="300x200" src="img/city.jpg" />
+						<div class="caption">
+							<h3>
+								哈佛结构
+							</h3>
+							<p>
+								哈佛结构是一种将程序指令存储和数据存储分开的存储器结构，它的主要特点是将程序和数据存储在不同的存储空间中，进行独立编址。
+							</p>
+							<p>
+								<a class="btn btn-primary" href="#">浏览</a> <a class="btn" href="#">分享</a>
+							</p>
+						</div>
+					</div>
+				</li>
+				<li class="span4">
+					<div class="thumbnail">
+						<img alt="300x200" src="img/sports.jpg" />
+						<div class="caption">
+							<h3>
+								改进型哈佛结构
+							</h3>
+							<p>
+								改进型的哈佛结构具有一条独立的地址总线和一条独立的数据总线，两条总线由程序存储器和数据存储器分时复用，使结构更紧凑。
+							</p>
+							<p>
+								<a class="btn btn-primary" href="#">浏览</a> <a class="btn" href="#">分享</a>
+							</p>
+						</div>
+					</div>
+				</li>
+			</ul>
+			<div class="pagination pagination-centered">
+				<ul>
+					<li>
+						<a href="#">上一页</a>
+					</li>
+					<li>
+						<a href="#">1</a>
+					</li>
+					<li>
+						<a href="#">2</a>
+					</li>
+					<li>
+						<a href="#">3</a>
+					</li>
+					<li>
+						<a href="#">4</a>
+					</li>
+					<li>
+						<a href="#">5</a>
+					</li>
+					<li>
+						<a href="#">下一页</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="row-fluid">
+		<div class="span6">
+			<ul class="inline">
+				<li>
+					新闻资讯
+				</li>
+				<li>
+					体育竞技
+				</li>
+				<li>
+					娱乐八卦
+				</li>
+				<li>
+					前沿科技
+				</li>
+				<li>
+					环球财经
+				</li>
+				<li>
+					天气预报
+				</li>
+				<li>
+					房产家居
+				</li>
+				<li>
+					网络游戏
+				</li>
+			</ul>
+		</div>
+		<div class="span6">
+			<ul class="inline">
+				<li>
+					新闻资讯
+				</li>
+				<li>
+					体育竞技
+				</li>
+				<li>
+					娱乐八卦
+				</li>
+				<li>
+					前沿科技
+				</li>
+				<li>
+					环球财经
+				</li>
+				<li>
+					天气预报
+				</li>
+				<li>
+					房产家居
+				</li>
+				<li>
+					网络游戏
+				</li>
+			</ul>
+		</div>
+	</div>
+</div>	
+	</body>
+</html>
 
