--- a/text/index.html
+++ b/text/index.html
@@ -253,13 +253,13 @@
 				</ol>
 				<div class="carousel-inner">
 					<div class="item">
-						<img alt="" src="image/1.jpg" />
+						<img alt="" src="image/1.JPG" />
 						<div class="carousel-caption">
 							<h4>
 								韩凯冰
 							</h4>
 							<p>
-								韩凯冰是弟弟
+								韩凯冰是个弟弟
 							</p>
 						</div>
 					</div>
@@ -270,18 +270,18 @@
 								韩凯冰
 							</h4>
 							<p>
-								韩凯冰是弟弟
+								韩凯冰是个弟弟
 							</p>
 						</div>
 					</div>
 					<div class="item">
-						<img alt="" src="image/3.jpg" />
+						<img alt="" src="image/3.JPG" />
 						<div class="carousel-caption">
 							<h4>
 								韩凯冰
 							</h4>
 							<p>
-								韩凯冰是弟弟
+								韩凯冰是个弟弟
 							</p>
 						</div>
 					</div>
@@ -425,4 +425,3 @@
 </div>	
 	</body>
 </html>
-
